-- What's new for x.x.x.x (mmm d, yyyy)

Enhancements
* Added Vista bitmaps and CSS files to allow a better Vista look/theme for the toolbar (Charlie Russel)

Bug Fixes
* wmd - Fixed to work with site changes (Glenn Carr)
* httpinst - Updated repository url; Added /list option to display search repository listing (Glenn Carr)
* lf - Fixed to with with site changes (Glenn Carr)
* yy - fix to handle no arguments (Glenn Carr)

Modified Searches
* sf - Added /svn to SourceForge search to display browseable SVN repository (Glenn Carr)
* qsfreq - Added /remove and /status options.  /remove removes one or more specified searches.  /status displays which searches are enabled and disabled. (Glenn Carr)
* httpinst - experimental /new_searches switch, doesn't work yet (Glenn Carr)

New Searches
* tfd - Simple TheFreeDictionary.com search (Glenn Carr)
* gt - Ultimate Guitar Tabs Archive search (Glenn Carr)
* wp - Seach for people using WhitePages.com (Glenn Carr)

-- What's new for 4.0.0.2 (Dec 1, 2006)

Enhancements
* DQSD is now hosted by a custom webbrowser host, rather than the undocumented one shipped with IE
* Installation is only allowed from an administrator account
* If upgrading from version 3 or earlier, the previous version must be uninstalled before the new install is allowed.

Bug Fixes
* racetv - fixed a font issue - (Monty Scroggins)
* ggd now resets switches between calls (MLL)

New Searches
* blingo - Search the web using the Google search engine and maybe win something just for searching. (John Bairen)
* wdc - weather.com search (John Bairen)
* tvc - tv.com search (Steve Poirier)
* twe - Twingine (John Bairen)
* cty - city-data search (Monty Scroggins)
* nfltv - NFL tv schedule parsed by timezone (Monty Scroggins)
* iptoc - IP to country name lookup (Nick Jenkins)
* iploc - IP to map lookup (Nick Jenkins)
* si - Static ice search, Australian tech price comparison (Nick Jenkins)
* lfm - Search last.fm, the leading music social site (MLL)