@@ -1,7 +1,10 @@
 <search function="msk">
   <name>Microsoft Knowledge Base</name>
-  <description>
-    Search the Microsoft Knowledge Base using either a regular search expression or a 6-digit "Q" code.<br/>
+  <category>Computers<category>Reference</category></category>
+  <contributor>Ryan Edwards, MLL, Glenn Carr</contributor>
+  <link>http://support.microsoft.com/search/</link>
+  <email>glenn at glenncarr dot com</email>
+  <description>Search the Microsoft Knowledge Base
     <div class="helpboxDescLabels">Switches:</div>
     <table class="helpboxDescTable">
       <tr><td>/google</td><td> - </td><td>Use Google to search support.microsoft.com</td></tr>
@@ -14,43 +17,67 @@
       <tr><td>msk q252795 /google</td></tr>
     </table>
   </description>
-  <category>Computers<category>Reference</category></category>
-  <link>http://support.microsoft.com/default.aspx?scid=fh;en-us;kbinfo</link>
-  <contributor>Ryan Edwards, MLL</contributor>
-
+  <form name="mskf"
+        method="get"
+        action="http://support.microsoft.com/search/default.aspx">
+    <input type="hidden" name="catalog" value="LCID=1033" />
+    <input type="hidden" name="spid" value="global" />
+    <input type="hidden" name="query" value="" />
+    <input type="hidden" name="adv" value="" />
+  </form>
   <form name="mskggf"
         action="http://www.google.com/search"
         method="get">
     <input type="hidden" name="q"/>
   </form>
-
   <script><![CDATA[
     function msk(q)
     {
+      if( nullArgs("msk", q) )
+        return;
+
+      // Parse switches with parseArgs:
+
+      // parseArgs usage:
+      // Arguments:
+      //    q                - string from the search function
+      //    expectedSwitches - list or array of the expected switch values
+      //    expandSwitches   - optional parameter [default = true] used to determine 
+      //                       if the switch shortcuts should be expanded (i.e. /f becomes /foo)
+      // Returns an object with these properties:
+      //    q        - the input string with the switches removed
+      //    switches - array of objects with these two properties:
+      //                  name:   expanded name of the matched switch (i.e. foo as in /foo:bar)
+      //                  value:  value of switch (i.e. bar as in /foo:bar)
+      //    switch_val - associative array with the switch name as the key with the switch value 
+      //                 as the value. (i.e. switch_val["foo"] = "bar" as in /foo:bar)
+
       var args = parseArgs(q, "google");
-      var res;
-      if( nullArgs("msk",args.q) )
-        return false;
-      else if( args.switches.length > 1 )
+      if ( args.switches.length > 0 )
       {
-        nullArgs("msk","?");
-        return false;
+        switch( args.switches[0].name )
+        {
+          case "google":
+            document.mskggf.q.value = args.q + " site:support.microsoft.com";
+            submitForm(mskggf);
+            return;
+        }
       }
-      else if( args.switches.length == 1 && args.switches[0].name == "google" )
-      {
-        document.mskggf.q.value = args.q + " site:support.microsoft.com";
-        submitForm(mskggf);
-      }
-      else if( (res = q.match(/^\s*[qQ]?(\d{6})\s*$/ )) != null )
-        openSearchWindow('http://support.microsoft.com/default.aspx?scid=kb;en-us;'+ "Q" + res[1]);
+
+      if ( res = args.q.match(/^\s*[qQ]?(\d{6})\s*$/) )
+        document.mskf.query.value = "Q" + res[1];
       else
-        openSearchWindow('http://search.support.microsoft.com/search/default.aspx?Catalog=LCID%3D1033%26CDID%3DEN-US-KB%26PRODLISTSRC%3DON&Product=msall&Query=' + q.replace( /\s+/g,'%2520' ) + '&Queryc=' + q.replace( /\s+/g,'+' ) + '&withinResults=false&srchstep=0&KeywordType=ALL&Titles=false&numDays=&maxResults=25');
+        document.mskf.query.value = args.q;
+      submitForm(mskf);
     }
   ]]></script>
-
   <copyright>
-	Copyright (c) 2002 David Bau
-	Distributed under the terms of the
-	GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
+    The following applies if this file is included and distributed with Dave's Quick Search Deskbar:
+    Copyright (c) 2002 David Bau; Distributed under the terms of the GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
   </copyright>
+  <created_by>
+    This search file was initially created on 01/04/07 at 21:20:51
+    by Dave's Quick Search Deskbar Search Wizard version 1.3,
+    Copyright (c) 2002 Glenn Carr; Distributed under the terms of the GNU General Public License, Version 2
+  </created_by>
 </search>
